@@ -13,7 +13,7 @@
 
 #import <tkobjc/global.h>
 #import <tclObjc.h>
-#import <Tk.h>
+#import <TkInterp.h>
 #import <tkobjc/BLTGraph.h>
 #import <collections.h>
 
