@@ -14,7 +14,7 @@
 
 #import <tkobjc/global.h>
 #import <tclObjc.h>
-#import <Tk.h>
+#import <TkInterp.h>
 #import <tkobjc/Widget.h>
 #import <tkobjc/Frame.h>
 
